fixing blue frame on ie7 - part2

--- a/css/main.css
+++ b/css/main.css
@@ -345,8 +345,8 @@ body {
 }
 
 .lt-ie8 .carousel .thumbnail-group .thumbnail-wrapper.active .blue-frame {
-  width: 156px;
-  height: 76px;
+  width: 153px;
+  height: 73px;
 }
 
 
